# sts_reader

./: Cargo.toml  LICENSE  README.md  bench_read_sts.py  pyproject.toml  sts_reader.pyi
.github/workflows/: CI.yml
src/: lib.rs
