[package]
name = "sts_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sts_reader"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.28"
pyo3 =  { version = "0.28", features = ["extension-module"] }
memmap2 = "0.9"
lexical-core = "1"

[target.'cfg(not(all(target_os = "linux", any(target_arch = "aarch64", target_arch = "arm"))))'.dependencies]
mimalloc = { version = "*", features = ["v3"] }

[profile.release]
lto = "fat"
codegen-units = 1
