[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "sts_reader"
description = "A Python library for reading STS files using Rust and PyO3."
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy >= 1.16.0",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.maturin]
features = ["pyo3/extension-module"]

[project.urls]
Homepage = "https://github.com/Daillusorisch/sts_reader"